# tuxanci2

./: .gitignore  .gitmodules  BUGS  CMakeLists.txt  COD.md  CONVENTIONS.md  CREDITS  CREDITS.md  Doxyfile  ISSUES  README.md  TODO  test.lua
data/gameplay/models/: nolok.glb  sky.glb  tux.glb
data/intro/models/gnufault-letters/: A.glb  F.glb  G.glb  L.glb  N.glb  T.glb  U.glb
data/menu/images/: menu.png.old
data/menu/models/gnufault-letters/: A.glb  F.glb  G.glb  L.glb  N.glb  T.glb  U.glb
docs/examples/screen/: screen.c  screen.h
include/: addon.h  arena-ldr.h  bg.h  bgm.h  button.h  camera.h  checkbox.h  config.h  debug.h  error.h  files.h  i18n.h  intro.h  list.h  main.h  mainmenu.h  menu.h  menu_screen.h  music.h  old-arena-ldr.h  play.h  screen.h  singleplayer.h  window.h
include/core/: arguments.h  network.h  server.h  watchdog.h
include/game/: bgm.h  button.h  camera.h  checkbox.h  client.h  desc.h  files.h  gameplay.h  host.h  i18n.h  join.h  list.h  loading.h  main.h  menu.h  play.h  screen.h  singleplayer.h  story.h  textbox.h  window.h
include/server/: main.h
po/: cs.po
scripts/: fixfiles.sh
src/: addon.c  arena-ldr.c  bg.c  bgm.c  button.c  camera.c  checkbox.c  config.c  debug.c  desc.c  error.c  files.c  gameplay.c  i18n.c  intro.c  list.c  main.c  mainmenu.c  menu.c  menu_screen.c  music.c  old-arena-ldr.c  play.c  screen.c  singleplayer.c  window.c
src/core/: arguments.c  server.c  watchdog.c
src/game/: bg.c  bgm.c  button.c  camera.c  checkbox.c  client.c  config.c  desc.c  files.c  gameplay.c  host.c  i18n.c  join.c  list.c  loading.c  main.c  mainmenu.c  menu.c  play.c  screen.c  singleplayer.c  story.c  textbox.c  window.c
src/server/: main.c  server.c
src/tests/: test.c
