cmake_minimum_required(VERSION 3.10)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

project(tuxanci2 LANGUAGES C)

include(ExternalProject)

find_program(OBJCOPY_TOOL NAMES objcopy)

file(GLOB_RECURSE SOURCES "src/*.c" "src/*.cpp")

# raylib
set(CMAKE_BUILD_TYPE Release)
set(CUSTOMIZE_BUILD ON)
set(USE_EXTERNAL_GLFW OFF)
set(PLATFORM Desktop)
set(OPENGL_VERSION OFF)
set(BUILD_EXAMPLES OFF)
set(GLFW_BUILD_WAYLAND ON)
set(GLFW_BUILD_X11 ON)
set(WITH_PIC OFF)
set(BUILD_SHARED_LIBS OFF)
set(INCLUDE_EVERYTHING OFF)
set(USE_AUDIO ON)
set(SUPPORT_MODULE_RSHAPES ON)
set(SUPPORT_MODULE_RTEXTURES ON)
set(SUPPORT_MODULE_RTEXT ON)
set(SUPPORT_MODULE_RMODELS ON)
set(SUPPORT_MODULE_RAUDIO ON)
set(SUPPORT_BUSY_WAIT_LOOP OFF)
set(SUPPORT_CAMERA_SYSTEM ON)
set(SUPPORT_GESTURES_SYSTEM OFF)
set(SUPPORT_RPRAND_GENERATOR OFF)
set(SUPPORT_MOUSE_GESTURES OFF)
set(SUPPORT_SSH_KEYBOARD_RPI OFF)
set(SUPPORT_WINMM_HIGHRES_TIMER ON)
set(SUPPORT_PARTIALBUSY_WAIT_LOOP ON)
set(SUPPORT_GIF_RECORDING OFF)
set(SUPPORT_COMPRESSION_API ON)
set(SUPPORT_AUTOMATION_EVENTS OFF)
set(SUPPORT_CUSTOM_FRAME_CONTROL OFF)
set(SUPPORT_CLIPBOARD_IMAGE OFF)
set(SUPPORT_QUADS_DRAW_MODE ON)
set(SUPPORT_FILEFORMAT_PNG ON)
set(SUPPORT_FILEFORMAT_BMP OFF)
set(SUPPORT_FILEFORMAT_TGA OFF)
set(SUPPORT_FILEFORMAT_JPG OFF)
set(SUPPORT_FILEFORMAT_GIF OFF)
set(SUPPORT_FILEFORMAT_QOI OFF)
set(SUPPORT_FILEFORMAT_PSD OFF)
set(SUPPORT_FILEFORMAT_DDS OFF)
set(SUPPORT_FILEFORMAT_HDR OFF)
set(SUPPORT_FILEFORMAT_PIC OFF)
set(SUPPORT_FILEFORMAT_KTX OFF)
set(SUPPORT_FILEFORMAT_ASTC OFF)
set(SUPPORT_FILEFORMAT_PKM OFF)
set(SUPPORT_FILEFORMAT_PVR OFF)
set(SUPPORT_IMAGE_EXPORT OFF)
set(SUPPORT_IMAGE_GENERATION OFF)
set(SUPPORT_IMAGE_MANIPULATION ON)
set(SUPPORT_DEFAULT_FONT ON)
set(SUPPORT_FILEFORMAT_TTF ON)
set(SUPPORT_FILEFORMAT_FNT OFF)
set(SUPPORT_FILEFORMAT_BDF OFF)
set(SUPPORT_TEXT_MANIPULATION OFF)
set(SUPPORT_FONT_ATLAS_WHITE_REC ON)
set(SUPPORT_FILEFORMAT_OBJ OFF)
set(SUPPORT_FILEFORMAT_MTL OFF)
set(SUPPORT_FILEFORMAT_IQM OFF)
set(SUPPORT_FILEFORMAT_GLTF ON)
set(SUPPORT_FILEFORMAT_VOX OFF)
set(SUPPORT_FILEFORMAT_M3D OFF)
set(SUPPORT_MESH_GENERATION OFF)
set(SUPPORT_FILEFORMAT_WAV OFF)
set(SUPPORT_FILEFORMAT_OGG ON)
set(SUPPORT_FILEFORMAT_MP3 OFF)
set(SUPPORT_FILEFORMAT_QOA OFF)
set(SUPPORT_FILEFORMAT_FLAC OFF)
set(SUPPORT_FILEFORMAT_XM OFF)
set(SUPPORT_FILEFORMAT_MOD OFF)
set(SUPPORT_STANDARD_FILEIO ON)
set(SUPPORT_SAVE_PNG OFF)
set(SUPPORT_SAVE_BMP OFF)
set(SUPPORT_TRACELOG ON)
set(SUPPORT_SCREEN_CAPTURE OFF)

add_compile_options(-Oz -Wall -Wextra -pedantic -pipe)

add_subdirectory(raylib)

add_executable(${PROJECT_NAME} ${SOURCES})

add_dependencies(${PROJECT_NAME} raylib)

target_include_directories(${PROJECT_NAME} PRIVATE include)

target_link_libraries(${PROJECT_NAME} PRIVATE raylib)

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} --strip-all $<TARGET_FILE:${PROJECT_NAME}>
    COMMENT "Stripping ${PROJECT_NAME}..."
    VERBATIM
)

set(DATA_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/data")
set(DATA_DEST_DIR "${CMAKE_CURRENT_BINARY_DIR}/data")

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${DATA_SRC_DIR}"
        "${DATA_DEST_DIR}"
    COMMENT "Copying data directory to build directory..."
)
